--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: web3dart_builders
 description: Extension of the web3dart package that includes the dart contract generator from abi.
-version: 0.0.2
-repository: https://github.com/inveker/web3dart_builders
-homepage: https://github.com/inveker/web3dart_builders
+version: 0.0.4
+publish_to: none
+#repository: https://github.com/inveker/web3dart_builders
+#homepage: https://github.com/inveker/web3dart_builders
 
 environment:
   sdk: '>=2.18.1 <3.0.0'
@@ -13,7 +14,8 @@ dependencies:
     sdk: flutter
   build: ^2.3.1
   code_builder: ^4.3.0
-  web3dart: ^2.4.1
+  web3dart: 
+    git: https://github.com/mgredenberg/web3dart.git
   built_collection: ^5.1.1
   path: ^1.8.2
   dart_style: ^2.2.4
