--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,9 @@ dependencies:
   build: ^2.3.1
   code_builder: ^4.3.0
   web3dart: 
-    git: https://github.com/mgredenberg/web3dart.git
+    git: 
+      url: https://github.com/mgredenberg/web3dart.git
+      accessToken: $MICHAEL_GITHUB_TOKEN
   built_collection: ^5.1.1
   path: ^1.8.2
   dart_style: ^2.2.4
